api: feat(core): add "postmaster settings" handler
