# api/internal/scopes/cluster/entities/settings.go
@@ -1,0 +1,12 @@
+package entities
+
+type PostmasterSettings struct {
+	Settings []Setting `json:"settings"`
+}
+
+type Setting struct {
+	Name        string `json:"name"`
+	Setting     string `json:"setting"`
+	Unit        string `json:"unit"`
+	Description string `json:"description"`
+}
